[project]
name = "dreamclubbot"
version = "1.0.0"
description = "Bot oficial do servidor Dream Club - Focado em evolução e comunidade."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "discord.py>=2.6.3",
    "pydantic-settings>=2.4.0",
    "python-dotenv>=1.0.1",
    "uvloop>=0.21.0; sys_platform != 'win32'",
    "sqlmodel>=0.0.22",
    "asyncpg>=0.30.0",
    "aiosqlite>=0.20.0",
    "wavelink>=3.3.0"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"